# GPGC

./: CMakeLists.txt
Lab1/: Lab1.cpp
Lab2/: Lab2.cpp
Lab3/: Lab3.cpp  Lab32.cpp  t301 FilimonMihail Condurat Victor.cpp  t302 Filimon Mihail Condurat Victor.cpp
Lab4/: Lab4.cpp
